@@ -68,7 +68,7 @@ else
 endif
 
 WXMD5 = libwxmd5.a
-CXXFLAGS = $(INCS) -Wall -O2 -MMD $(CPU_PARAM) $(XRC_PARAM) $(DEBUG_PARAM) $(PORTABLE_PARAM)
+CXXFLAGS = $(INCS) -fno-strict-aliasing -Wall -O2 -MMD $(CPU_PARAM) $(XRC_PARAM) $(DEBUG_PARAM) $(PORTABLE_PARAM)
 BIN = wxdfast
 RES = wxDFast.res
 VERSION = 0.5.5
