@@ -13,6 +13,7 @@
   program to run directly from pendrives
 - Fixed some memory leaks related to the metalink
   class
+- Added proxy support(just for HTTP downloads)
 
 0.5.4
 ===================================================
